level-1 almost done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <script src="/dayFour/level-3.js"></script>
+    <script src="/dayFive/practice.js"></script>
 </body>
 </html>
